add Denmau Blog project

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h2 class="section-title">Projects</h2>
             <div class="card-deck">
                 <div class="card mb-2">
-                    <div class="row">
+                    <div class="row text-center">
                         <div class="col">
                             <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="400" width="200">
                         </div>
@@ -227,10 +227,13 @@
                             <div><p class="card-title">Food Fit</p></div>
                             <div><img src="img/java.png" alt="java" height="51" width="37"/></div>
                             <div><img src="img/firebase.png" alt="firebase" height="55" width="40"/></div>
+                            <div><a href="https://www.github.com/denmau/foodfit" class="btn btn-outline-primary">View on
+                                GitHub</a></div>
                         </div>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">Food Fit is a Java <span class="color-red">Android App</span> that gives you
+                        <p class="card-text">Food Fit is a Java <span class="color-red">Android App</span> that gives
+                            you
                             access to 5000+<span class="color-red">*</span> recipes, each
                             with nutritional information.
                             Users can search for or view random recipes.
@@ -243,68 +246,40 @@
                             month.</small></p>
                     </div>
                 </div>
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--            ##############################################################################-->
-
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
-                    </div>
-                    <div class="col">
-                        <p>Food Fit</p>
-                        <img src="img/java.png" alt="java">
-                        <img src="img/firebase.png" alt="firebase">
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a href="" class="btn btn-outline-secondary">View on GitHub</a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
+                <div class="card mb-2">
+                    <div class="row text-center">
                         <div class="col">
-                            <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
+                            <img src="img/denmaublog.png" alt="foodfit app" height="400" width="200">
                         </div>
-                        <div class="col">
-                            <p>Food Fit</p>
-                            <img src="img/java.png" alt="java">
-                            <img src="img/firebase.png" alt="firebase">
+                        <div class="col space-equally-vertically">
+                            <div><p class="card-title">Denmau Blog</p></div>
+                            <div><img src="img/python.png" alt="java" height="66" width="67"/></div>
+                            <div><img src="img/django.png" alt="firebase" height="75" width="58"/></div>
+                            <div><a href="https://www.github.com/denmau/foodfit" class="btn btn-outline-primary">View on
+                                Heroku</a></div>
+                            <div><a href="https://www.github.com/denmau/foodfit" class="btn btn-outline-secondary">View
+                                on
+                                GitHub</a></div>
                         </div>
                     </div>
-                    <div class="card-footer">
-                        <a href="" class="btn btn-outline-secondary">View on GitHub</a>
+                    <div class="card-body">
+                        <p class="card-text">This is <span class="color-red">python Django blog</span> that allows <span
+                                class="color-red">authenticated</span> users to write and
+                            post blog articles. Authors are allowed to create, read, update or even delete their
+                            articles (<span class="color-red">CRUD</span>).
+                            This web application allows any logged in user to leave a comment for each article.
+                            There is also a reset password feature for users who forget their passwords.
+                            Styling is done by <span class="color-red">bootstrap</span>.
+                        </p>
+                        <p class="card-text"><small class="text-muted">The App uses <span
+                                class="color-red">SQLite</span> Database for the development
+                            version, and <span class="color-red">PostgreSQL</span> for the deployed version.
+                        </small></p>
                     </div>
                 </div>
+
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </section>
 
