fix broken links for Denmau Blog

--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                             <div><p class="card-title">Denmau Blog</p></div>
                             <div><img src="img/python.png" alt="java" height="66" width="67"/></div>
                             <div><img src="img/django.png" alt="firebase" height="75" width="58"/></div>
-                            <div><a href="https://www.github.com/denmau/foodfit" class="btn btn-outline-primary">View on
+                            <div><a href="http://denmaublog.herokuapp.com/" class="btn btn-outline-primary">View on
                                 Heroku</a></div>
-                            <div><a href="https://www.github.com/denmau/foodfit" class="btn btn-outline-secondary">View
+                            <div><a href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog" class="btn btn-outline-secondary">View
                                 on
                                 GitHub</a></div>
                         </div>
