finish skils section

--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
                             <div><img src="img/django.png" alt="firebase" height="75" width="58"/></div>
                             <div><a href="http://denmaublog.herokuapp.com/" class="btn btn-outline-primary">View on
                                 Heroku</a></div>
-                            <div><a href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog" class="btn btn-outline-secondary">View
+                            <div><a href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                                    class="btn btn-outline-secondary">View
                                 on
                                 GitHub</a></div>
                         </div>
@@ -271,10 +272,30 @@
                             There is also a reset password feature for users who forget their passwords.
                             Styling is done by <span class="color-red">bootstrap</span>.
                         </p>
+                        <p class="card-text">The admin has rights to edit or delete any article or comment.</p>
                         <p class="card-text"><small class="text-muted">The App uses <span
                                 class="color-red">SQLite</span> Database for the development
                             version, and <span class="color-red">PostgreSQL</span> for the deployed version.
                         </small></p>
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        <p class="card-text">This GitHub repo contains most of my Machine Learning mini-projects, and
+                            those I
+                            encountered while taking the
+                            <a href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
+                               target="_blank">DeepLearning.ai Tensorflow Professional Certificate</a>.</p>
+                        <p class="card-text">Mini-Projects here include:</p>
+                        <ul>
+                            <li>Computer Vision - Convolutional Neural Networks</li>
+                            <li>Computer Vision - Detecting Horses vs Humans</li>
+                            <li>Natural Language Processing - predicting a Shakes Pear article</li>
+                            <li>Time Series & Predictions - Working with stock data</li>
+                        </ul>
+                        <a href="https://github.com/denmau/tensorflow-practice" class="btn btn-primary">View on
+                            GiHub</a>
                     </div>
                 </div>
 
