add style to footer

--- a/index.html
+++ b/index.html
@@ -410,11 +410,17 @@
                     </div>
                 </div>
 
-                <div class="col" style="cursor: pointer;" onclick="window.location='mailto:dmkamau475@gmail.com';
-    ">
+                <div class="col" style="cursor: pointer;"
+                     onclick="window.location='mailto:dmkamau475@gmail.com';">
                     <div class="social-container">
                         <img src="img/iconmonstr-email.svg" alt="email" height="15">
                     </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
 
 </footer><!--Footer End-->
 
