--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
 
 </body>
 <!-- Custom JS FIle  -->
-<script src="/js/index.js"></script>
+<script src="js/index.js"></script>
+
 <!-- Page Clip Form Submission -->
 <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
