--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description"
+          content="I am a Web Developer and Machine Learning Engineer. I study Computer Science at South Eastern Kenya University.">
+    <meta name="author" content="Dennis Kamau">
 
     <!-- Canonical Link -->
     <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }"/>
