mobile version complete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description"
-          content="I am a Web Developer and Machine Learning Engineer. I study Computer Science at South Eastern Kenya University.">
+          content="I am a 21 year old Full Stack Machine Learning Engineer. I study Computer Science at South Eastern Kenya University.">
     <meta name="author" content="Dennis Kamau">
 
     <!-- Canonical Link -->
@@ -63,10 +63,10 @@
                 <div class="navbar-nav ml-auto flex-nowrap">
                     <a class="nav-item nav-link active" href="https://www.denmau.me">Home</a
                     >
-                    <a class="nav-item nav-link" href="#aboutMe"
+                    <a class="nav-item nav-link" href="#projects"
                     >Projects</a
                     >
-                    <a class="nav-item nav-link" href="#contactMe"
+                    <a class="nav-item nav-link" href="#contact"
                     >Contact</a
                     >
                 </div>
@@ -82,7 +82,7 @@
             <div class="greetings">Hello, I'M <span class="color-red">DEN</span>NIS KA<span class="color-red">MAU</span>
             </div>
             <div class="hero-text">I develop for the web</div>
-            <div class="about-me-summary">I am a 21 year old Web Developer and Machine Learning Engineer.
+            <div class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer.
                 I study Computer Science at South Eastern Kenya University. I am fortunate to have worked
                 alongside
                 senior developers who I envy and draw inspiration from. This has taught me to write code that is
@@ -101,73 +101,76 @@
             Web Development
         </p>
         <div class="container cards-container">
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/html.png" alt="html" height="68">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/css.png" alt="css" height="66">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/javascript.png" alt="javascript" height="66">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/python.png" alt="python" height="66">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/django.png" alt="django" height="75">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/php.png" alt="php" height="40">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/mysql.png" alt="mysql" height="35">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/powerbi.png" alt="powerbi" height="69">
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="img/android.png" alt="android" height="68">
-                    </div>
-                </div>
-            </div>
             <div class="row">
-                <p class="more-skills">I am familiar with Android development, Java, C / C++, Sass, AWS and GCP (Google
-                    Cloud
-                    Platform)</p>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/html.png" alt="html" height="68">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/css.png" alt="css" height="66">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/javascript.png" alt="javascript" height="66">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/python.png" alt="python" height="66">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/django.png" alt="django" height="75">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/php.png" alt="php" height="40">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/mysql.png" alt="mysql" height="35">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/power-bi.svg" alt="powerbi" height="69">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="img/aws.svg" alt="aws" height="68">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <p class="more-skills">I am familiar with Android development, Java, C / C++, Sass and GCP
+                        (Google
+                        Cloud
+                        Platform)</p>
+                </div>
             </div>
         </div>
     </div>
@@ -216,13 +219,13 @@
 </section>
 
 <!-- Projects -->
-<section id="projects" class="background-black">
+<section id="projects" class="background-black border">
     <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="card-deck">
             <div class="card mb-2">
                 <div class="row text-center">
-                    <div class="col">
+                    <div class="col d-flex justify-content-end">
                         <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="400" width="200">
                     </div>
                     <div class="col space-equally-vertically">
@@ -250,36 +253,39 @@
             </div>
             <div class="card mb-2">
                 <div class="row text-center">
-                    <div class="col">
-                        <img src="img/denmaublog.png" alt="foodfit app" height="400" width="200"
-                             class="border border-success">
+
+                    <div class="row text-center">
+                        <div class="col d-flex justify-content-end">
+                            <img src="img/denmaublog.png" alt="foodfit app" height="400" width="200"
+                                 class="border border-success">
+                        </div>
+                        <div class="col space-equally-vertically">
+                            <div><p class="card-title">Denmau Blog</p></div>
+                            <div><img src="img/python.png" alt="java" height="66" width="67"/></div>
+                            <div><img src="img/django.png" alt="firebase" height="75" width="58"/></div>
+                            <div><a href="http://denmaublog.herokuapp.com/" class="btn btn-outline-primary">View on
+                                Heroku</a></div>
+                            <div><a href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                                    class="btn btn-outline-secondary">View
+                                on
+                                GitHub</a></div>
+                        </div>
                     </div>
-                    <div class="col space-equally-vertically">
-                        <div><p class="card-title">Denmau Blog</p></div>
-                        <div><img src="img/python.png" alt="java" height="66" width="67"/></div>
-                        <div><img src="img/django.png" alt="firebase" height="75" width="58"/></div>
-                        <div><a href="http://denmaublog.herokuapp.com/" class="btn btn-outline-primary">View on
-                            Heroku</a></div>
-                        <div><a href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                                class="btn btn-outline-secondary">View
-                            on
-                            GitHub</a></div>
+                    <div class="card-body">
+                        <p class="card-text">This is <span class="color-red">python Django blog</span> that allows <span
+                                class="color-red">authenticated</span> users to write and
+                            post blog articles. Authors are allowed to create, read, update or even delete their
+                            articles (<span class="color-red">CRUD</span>).
+                            This web application allows any logged in user to leave a comment for each article.
+                            There is also a reset password feature for users who forget their passwords.
+                            Styling is done by <span class="color-red">bootstrap</span>.
+                        </p>
+                        <p class="card-text">The admin has rights to edit or delete any article or comment.</p>
+                        <p class="card-text"><small class="text-muted">The App uses <span
+                                class="color-red">SQLite</span> Database for the development
+                            version, and <span class="color-red">PostgreSQL</span> for the deployed version.
+                        </small></p>
                     </div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">This is <span class="color-red">python Django blog</span> that allows <span
-                            class="color-red">authenticated</span> users to write and
-                        post blog articles. Authors are allowed to create, read, update or even delete their
-                        articles (<span class="color-red">CRUD</span>).
-                        This web application allows any logged in user to leave a comment for each article.
-                        There is also a reset password feature for users who forget their passwords.
-                        Styling is done by <span class="color-red">bootstrap</span>.
-                    </p>
-                    <p class="card-text">The admin has rights to edit or delete any article or comment.</p>
-                    <p class="card-text"><small class="text-muted">The App uses <span
-                            class="color-red">SQLite</span> Database for the development
-                        version, and <span class="color-red">PostgreSQL</span> for the deployed version.
-                    </small></p>
                 </div>
             </div>
             <div class="card mb-2">
