made hero section responsive

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                 >MAU</span>
                 </div>
                 <div class="hero-text">I develop for the web</div>
-                <div class="about-me-summary">
-                    I am a 21 year old Full Stack Machine Learning Engineer. I am a student at South Eastern Kenya
-                    University, where I study Computer Science. I am fortunate
-                    to have worked alongside senior developers who I envy and draw
-                    inspiration from. This has taught me to write code that is
-                    maintainable, easy to reuse and understand.
+                <div>
+                    <p class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer. I am a student at South Eastern Kenya
+                        University, where I study Computer Science. I am fortunate
+                        to have worked alongside senior developers who I envy and draw
+                        inspiration from. This has taught me to write code that is
+                        maintainable, easy to reuse and understand.</p>
                 </div>
                 <!-- TODO: animated upward arrow to show scrolling needed-->
             </div>
