fix responsiveness issues for projects section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 </div>
                 <div class="hero-text">I develop for the web</div>
                 <div>
-                    <p class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer. I am a student at South Eastern Kenya
+                    <p class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer. I am a student
+                        at South Eastern Kenya
                         University, where I study Computer Science. I am fortunate
                         to have worked alongside senior developers who I envy and draw
                         inspiration from. This has taught me to write code that is
@@ -114,63 +115,63 @@
         <p class="section-sub-title">Web Development</p>
         <div class="container cards-container">
             <div class="row">
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/html.png" alt="html" height="68"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/css.png" alt="css" height="66"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/javascript.png" alt="javascript" height="66"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/python.png" alt="python" height="66"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/django.png" alt="django" height="75"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/php.png" alt="php" height="40"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/mysql.png" alt="mysql" height="35"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/power-bi.svg" alt="powerbi" height="69"/>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-sm-3 col-md-2">
+                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                     <div class="card">
                         <div class="card-body">
                             <img src="img/aws.svg" alt="aws" height="68"/>
@@ -230,7 +231,6 @@
             I am a certified
             <a
                     href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
-                    target="_blank"
             >DeepLearning.ai Tensorflow Developer</a
             >. I enjoy building Machine Learning models with Tensorflow.
         </p>
@@ -247,8 +247,8 @@
 <section id="projects" class="background-black">
     <div class="container">
         <h2 class="section-title">Projects</h2>
-        <div class="card-deck">
-            <div class="card mb-2">
+        <div class="row">
+            <div class="card mb-2 col-12 col-md-5">
                 <div class="row text-center">
                     <div class="col d-flex justify-content-end">
                         <img
@@ -301,9 +301,9 @@
                     </p>
                 </div>
             </div>
-            <div class="card mb-2">
+            <div class="card mb-2 col-12 col-md-5">
                 <div class="row text-center">
-                    <div class="row text-center">
+                    <div class="row text-center justify-content-around">
                         <div class="col d-flex justify-content-end">
                             <img
                                     src="img/denmaublog.png"
@@ -374,7 +374,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-2">
+            <div class="card mb-2 col-12 col-md-5">
                 <div class="card-body">
                     <p class="card-text">
                         This GitHub repo contains most of my Machine Learning
