fix contact section responsiveness issues

--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
         <div class="hero-area-container">
             <div class="container hero-area color-white">
                 <div class="greetings">
-                    Hello, I'M <span class="color-red">DEN</span>NIS KA<span
-                        class="color-red"
-                >MAU</span>
+                    <p>
+                        Hello, I'M <span class="color-red">DEN</span>NIS KA<span
+                            class="color-red">MAU</span>
+                    </p>
                 </div>
-                <div class="hero-text">I develop for the web</div>
+                <div class="hero-text"><p>I develop for the web</p></div>
                 <div>
                     <p class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer. I am a student
                         at South Eastern Kenya
@@ -248,7 +249,7 @@
     <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="row">
-            <div class="card mb-2 col-12 col-md-5">
+            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
                     <div class="col d-flex justify-content-end">
                         <img
@@ -301,7 +302,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card mb-2 col-12 col-md-5">
+            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
                     <div class="row text-center justify-content-around">
                         <div class="col d-flex justify-content-end">
@@ -374,7 +375,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-2 col-12 col-md-5">
+            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="card-body">
                     <p class="card-text">
                         This GitHub repo contains most of my Machine Learning
